# vk-api-py-models

./: .gitignore  LICENSE  Makefile  pyproject.toml
codegen/: __main__.py  entrypoint.py  loader.py  snake2camel.py  snake2pascal.py
codegen/generators/: base.py  objects.py
codegen/templates/: methods.py.jinja  objects.py.jinja
codegen/templates/bases/: object.py
codegen/templates/objects/: alias.py.jinja  body.py.jinja  enum.py.jinja  field.py.jinja  inheritance.py.jinja  main.py.jinja  object.py.jinja  resolve_type.py.jinja  to_valid_name.py.jinja
vkapipymodels/bases/: object.py
vkapipymodels/objects/: oauth.py
vkmodels/objects/: account.py  addresses.py  ads.py  adsweb.py  appWidgets.py  apps.py  audio.py  base.py  board.py  callback.py  calls.py  client.py  comment.py  database.py  docs.py  donut.py  events.py  fave.py  friends.py  gifts.py  groups.py  leadForms.py  likes.py  link.py  market.py  messages.py  newsfeed.py  notes.py  notifications.py  oauth.py  orders.py  owner.py  pages.py  photos.py  podcast.py  polls.py  prettyCards.py  search.py  secure.py  stats.py  (+10 more)
